k8s/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kbk-sql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
